--- a/code_group12/Embedded_event/Debug/makefile
+++ b/code_group12/Embedded_event/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: Embedded_event.elf secondary-outputs
 
 # Tool invocations
-Embedded_event.elf Embedded_event.map: $(OBJS) $(USER_OBJS) D:\STM32\CUbe\ MX\Embedded_event\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Embedded_event.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\STM32\CUbe MX\Embedded_event\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Embedded_event.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Embedded_event.elf Embedded_event.map: $(OBJS) $(USER_OBJS) D:\Github\Embedded_20231\code_group12\Embedded_event\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Embedded_event.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\Github\Embedded_20231\code_group12\Embedded_event\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Embedded_event.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
